--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 <h1>Yet Another Dropdown</h1>
-
+<a class="docs" href="docs/YAD.html">
+    <h2>JSDoc</h2>
+</a>
+<a class="docs" href="https://github.com/mbarinov/yad">
+    <h2>Github</h2>
+</a>
 <div class="test" style="width:400px; margin: 0 auto">
     <div class="dropdown"
          id="vk-dropdown">
@@ -18,6 +23,24 @@
 
         <div class="clear"></div>
     </div>
+    <pre>var dropdown = new YAD({
+        el: '#vk-dropdown',
+        multiple: false,
+        cachedResourses: cachedData,
+        property: 'name',
+        dataSource: (function () {
+            return function (str) {
+                var dfd = Q.defer();
+
+                dfd.resolve([{name: 'response from server'}]);
+
+                return dfd.promise;
+            }
+        }()),
+        onSelect: function (data) {
+            console.log(data);
+        }
+    });</pre>
 
     <br>
     <br>
@@ -28,7 +51,21 @@
 
         <div class="clear"></div>
     </div>
+    <pre>var dropdown2 = new YAD({
+        el: '#vk-dropdown2',
+        multiple: true,
+        cachedResourses: cachedData,
+        property: 'name',
+        dataSource: YAD.getData('https://vk.com/api'),
+        onSelect: function (data) {
+            console.log(data);
+        }
+    });
+    </pre>
 </div>
+<a class="author" href="http://mbarinov.github.io/">
+    <span>by Max</span>
+</a>
 <script>
     var cachedData = [
         {
@@ -83,6 +120,30 @@
     h1 {
         text-align: center;
         color: #45688E;
+    }
+
+    pre {
+        color: grey;
+        font-family: monospace;
+    }
+
+    .docs {
+        display: block;
+        text-align: center;
+        color: grey;
+    }
+
+    .author {
+        display: block;
+        text-align: center;
+    }
+
+    .author {
+        color: black;
+    }
+
+    .author:visited {
+        color: grey;
     }
 </style>
 </body>
